--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -530,7 +530,12 @@
       "import": {
         "error-wrapper": "<div>Aucun étudiant n’a été importé.<br/><strong>{message}</strong><br/> Veuillez modifier votre fichier et l’importer à nouveau.</div>",
         "global-error": "<div>Aucun étudiant n’a été importé.<br/>Veuillez réessayer ou nous contacter via <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://support.pix.fr/support/tickets/new\">le formulaire du centre d’aide</a></div>",
-        "global-success": "La liste a été importée avec succès."
+        "global-success": "La liste a été importée avec succès.",
+        "global-success-with-warnings": "<div>La liste a été importée avec succès.<br/><br/>Cependant les valeurs suivantes n’ont pas été reconnues.<br />{warnings}<br/><br/>Elles ont été remplacées par “Non reconnu”. Si vous considérez qu’il manque des valeurs dans la liste limitative, veuillez nous contacter à <a href=\"mailto:sup@pix.fr\">sup@pix.fr</a></div>",
+        "warnings": {
+          "diploma": "Diplômes non reconnus : {diplomas}; ",
+          "study-scheme": "Régimes non reconnus : {studySchemes}; "
+        }
       },
       "table": {
         "column": {
