--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -71,6 +71,13 @@
       "result-by-page": "See"
     }
   },
+  "charts": {
+    "participants-by-stage": {
+      "participants": "{count, plural, =0 {0 participants} =1 {1 participant} other {{count, number} participants}}",
+      "percentage": "{percentage} %",
+      "title": "Distribution of participants by rating"
+    }
+  },
   "navigation": {
     "credits": {
       "number": "{count, plural, =0 {0 credits} =1 {1 credit} other {{count, number} credits}}",
